RANGER-3813: Fix ConcurrentModificationException in UnixUserGroupBuilder
Signed-off-by: pradeep <pradeep@apache.org>
(cherry picked from commit c51fedfba9efb61c1ff7bf9b41f4db4b965fe1a7)